[Dev-02] Removed unnecessary switch in MinesweeperGrid.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 /out/production/minesweeper/
 /out/production/minesweeper/META-INF/
 /out/production/minesweeper/minesweeper/
+/minesweeper.jar
+/minesweeper.iml
+/Minesweeper.bat
+/.idea/vcs.xml
+/.idea/modules.xml
+/.idea/misc.xml
+/.idea/artifacts/minesweeper_jar.xml
