--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-/out/
-/out/artifacts/
-/out/artifacts/minesweeper_jar/
-/out/production/
-/out/production/minesweeper/
-/out/production/minesweeper/META-INF/
-/out/production/minesweeper/minesweeper/
-/minesweeper.jar
-/minesweeper.iml
-/Minesweeper.bat
-/.idea/vcs.xml
-/.idea/modules.xml
-/.idea/misc.xml
-/.idea/artifacts/minesweeper_jar.xml
+# IntelliJ files
+.idea/
+minesweeper.iml
+
+# Production files
+out/
+target/
